anypoint-connector-devkit/v/3.6/setting-up-your-dev-environment.adoc
= 设置您的开发环境
:keywords: devkit, setup, studio, maven, devkit plugin, plugin

本文档介绍了如何准备一个包含开发Anypoint连接器所需的所有组件的开发环境。您必须在本地环境中安装并使用以下组件：

*  http://www.oracle.com/technetwork/java/javase/archive-139210.html[Java开发工具包（JDK）] *version 7*仅用于编译和构建您的Java代码
*  <<Apache Maven>>来管理您的项目构建
作为IDE构建和测试连接器的*  http://www.mulesoft.org/download-mule-esb-community-edition[Anypoint Studio]
*  Anypoint DevKit插件

以下各节介绍设置连接器开发环境所需的具体细节。

==  Anypoint Studio

虽然您可以将任何Java IDE与Maven支持一起使用，但强烈建议您使用*Anypoint Studio*，因为它简化并简化了构建连接器所需的几个步骤。

[NOTE]
要构建连接器项目，必须先将Anypoint Connector DevKit插件安装到Anypoint Studio中。

如果您尚未安装Anypoint Studio，请按照 link:/mule-user-guide/v/3.6/installing[详细的说明]进行安装。要快速了解Anypoint Studio，请查看 link:/anypoint-studio/v/6/index[Anypoint Studio Essentials]。

==  JDK 7

Oracle使JDK免费提供给所有支持的平台，包括Windows，Mac OS X和Linux。下载适用于您的平台的 http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase7-521261.html[Java开发工具包（JDK）]的第7版并安装。

Anypoint Studio必须配置为引用您的JDK的位置，而不是您的JRE。要将JDK设置为Anypoint Studio的已安装JRE，请执行以下操作：

. 打开Anypoint Studio。
. 打开首选项。
**  *Windows*和*Linux*：窗口>首选项。
**  *Mac*：Anypoint Studio>偏好设置。
. 展开*Java*。
. 选择*Installed JREs*。
. 如果Anypoint Studio引用JRE而不是JDK，请编辑记录并将其重新映射到JDK安装的根目录。

image:installed_jres_jdk.png[安装了jres]

==  Apache Maven

Apache Maven提供了一个构建管理器，Anypoint Studio用它来构建连接器项目。

有关概念和基本命令的简要介绍，请参阅 http://maven.apache.org/guides/getting-started/maven-in-five-minutes.html[Maven在五分钟内]。

. 从 http://maven.apache.org/download.cgi[Apache Maven下载页面]下载Maven发行版。
+
*Important*：对于Windows使用，只需下载Maven 3.1.1，通过向下滚动Apache Maven http://maven.apache.org/download.cgi[下载页面]即可。
. 将下载内容解压缩到本地驱动器上的文件夹。
. 创建名为`M2_HOME`的环境变量，然后将其设置为解包Maven的文件夹。
. 更新`PATH`环境变量以包含Maven二进制文件的路径。
**  *Windows*：将以下内容添加到PATH变量中：`%M2_HOME%\bin`
**  *Mac*或*Linux*：将以下内容添加到PATH变量中：`$M2_HOME/bin`

有关更多详细说明和安装选项，请参阅Maven下载页面;下载链接下方提供了针对不同平台的说明。

== 在Studio中安装DevKit插件

要安装DevKit插件，请执行以下操作：

. 要在Studio中使用DevKit，您必须在本地驱动器上安装Apache http://maven.apache.org/download.cgi[Maven的]：
.. 要确认您是否安装了Maven，请打开Anypoint Studio首选项（在Mac上单击*Anypoint*> *Preferences*，在Windows计算机上单击*Window*> *Preferences* ）。
.. 转到*Anypoint Studio*> *Maven Settings*，并确保*Maven installation home directory*指向您安装Maven的目录。
.. 点击*Test Maven Configuration*以确保Maven的配置正确无误。
. 从*Anypoint Studio*中的`Help`菜单中，点击*Install New Software*：
+
image:InstallNewSoftware.png[InstallNewSoftware]
+
. 在安装菜单的*Work with*下拉菜单中，点击向下箭头，然后点击*Anypoint Addons Update Site*。点击*Anypoint DevKit Plugin*的复选框，然后点击*Next*。
+
[NOTE]
如果Anypoint插件更新站点在下拉列表中不可用，请单击*Add*并将此URL复制到存储库。
+
image:AddOns+Update+Site.png[附加元件+更新+网站]
+
. 继续安装向导中的其余步骤。
. 重新启动Studio。

== 另请参阅

*  *NEXT:*继续进行下一步 link:/anypoint-connector-devkit/v/3.6/setting-up-api-access[设置API访问]。
* 跳转到 link:/anypoint-connector-devkit/v/3.6/creating-an-anypoint-connector-project[创建Anypoint连接器项目]。
* 渴望开始编码？使用 link:/anypoint-connector-devkit/v/3.6/anypoint-connector-development[Anypoint连接器开发]快速浏览整个开发流程。
